duniverse/menhirLib.20200211/test/static/bad/missing-percentpercent.mly
%token FOO BAR
%start <unit> main

main:
  FOO BAR
    { () }

