duniverse/menhirLib.20200211/test/static/bad/missing-percentpercent.exp
File "missing-percentpercent.mly", line 4, characters 4-5:
Error: syntax error inside a declaration.
Did you perhaps forget the %% that separates declarations and rules?
